Source/WebCore/inspector/InspectorFrontendClientLocal.h
@@ -134,6 +134,7 @@ protected:
 
 private:
     friend class FrontendMenuProvider;
+    Optional<bool> evaluationResultToBoolean(InspectorFrontendAPIDispatcher::EvaluationResult);
 
     InspectorController* m_inspectedPageController { nullptr };
     Page* m_frontendPage { nullptr };
