Source/WebCore/platform/Logging.h
@@ -71,6 +71,7 @@ namespace WebCore {
     M(Images) \
     M(IndexedDB) \
     M(IndexedDBOperations) \
+    M(Inspector) \
     M(Layers) \
     M(Layout) \
     M(FormattingContextLayout) \
